--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-	<title></title>
+	<title>Method Victor</title>
 </head>
 <body>
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
