--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<title>Method Victor</title>
 </head>
 <body>
+	<header>
+	<i class="fa fa-users" aria-hidden="true"></i>
+		
+	</header>
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
