--- a/index.html
+++ b/index.html
@@ -13,10 +13,24 @@
 		
 		<body>		
 			<header>
-				<div class="logo">
+				<div class="logoHeader">
 					<p>Method</p>
 						<img src="images/logo.png">
 					<p>Victor'</p>
+				</div>
+				<div class="navbar">
+					<ul class="listeHeader">
+						<li class="selectMenu">
+							<select id="monselect">
+							</select>
+						</li>
+						<li><i class="fa fa-users fa-2x" aria-hidden="true"></i></li>
+						<li>
+							<a href="setting.html">
+								<i class="fa fa-cogs fa-2x" aria-hidden="true"></i>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</header>	
 			
@@ -39,7 +53,7 @@
 				<div>
 					<ul>
 						<li class="imagefooter">
-							<img class="logo" src="images/logo.png">
+							<img class="logoFooter" src="images/logo.png">
 							<h3 class="titlefooter">SIMPLON.CO</h3>
 						</li>
 						<li>
