--- a/setting.html
+++ b/setting.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 	<header>
-		<div class="logo">
+		<div class="boutonRetour">
+			   <a href="index.html"><i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>Retour</a>
+		</div>
+		<div class="logoHeader">
 			<p>Method</p>
 				<img src="images/logo.png">
 			<p>Victor'</p>
